# targe

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yaml  release.yml
examples/: README.md  log.txt  persisting_audit_log.py  quick_start.py  roles.yml  scenario_custom_policy_for_resource_owner.py  scenario_denied_scope_example.py  scenario_dynamic_scope_example.py  scenario_rbac_mode_actor_has_role.py  scenario_rbac_mode_actor_is_missing_role.py  scenario_static_scope_example.py
examples/cookbook/: README.md  actors.py  application.py  domain.py  policies.py  roles.py  scenario_actor_uses_allowed_dynamic_scope.py  scenario_actor_uses_allowed_static_scope.py  scenario_actor_uses_scope_for_allowed_reference.py  scenario_actor_uses_scope_for_denied_reference.py  scenario_custom_policy_for_resource_owner.py  scenario_rbac.py  scenario_rbac_mode_actor_has_role.py  scenario_rbac_mode_actor_misses_role.py  scenario_rbac_mode_with_scope.py  scenario_writer_creates_published_article.py  scenario_writer_creates_unpublished_article.py
targe/: __init__.py  actor.py  audit.py  auth.py  errors.py  policy.py  role.py  utils.py
tests/: test_actor.py  test_audit_store.py  test_auth.py  test_compiled_policies.py  test_match_pattern.py  test_match_rule.py  test_normalize_scope.py  test_observable_list.py  test_resolve_reference.py  test_role.py
toffi/: __init__.py  actor.py  audit.py  auth.py  errors.py  policy.py  role.py  stores.py  utils.py
