[tool.poetry]
name = "targe"
version = "0.4.0"
description = "Powerful and flexible policy based authorization library."
authors = [
    "Dawid Kraczkowski <dawid.kraczkowski@gmail.com>"
]
license = "MIT"
readme = "README.md"
exclude = ["examples/*"]
homepage = "https://github.com/kodemore/targe"
repository = "https://github.com/kodemore/targe"
documentation = "https://github.com/kodemore/targe"

keywords = ["authorization", "acl", "rbac", "policy", "auth", "role", "permissions"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

# Requirements
[tool.poetry.dependencies]
python = "^3.8"
gid = "^1.0.1"
gaffe = "^0.2.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pytest = "^7.2.2"
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.17.2"

